# serializer version: 1
# name: test_check_output_matches_the_snapshot[class_modules]
  list([
    'bad/application/services/pricing.py:9:1: class-modules: helper — функция; в application/services держат класс',
    'bad/dto/orders.py:7:1: class-modules: Status — перечисление; в dto держат dataclass, алиас',
    'bad/dto/orders.py:16:1: class-modules: OrderMissing — исключение; в dto держат dataclass, алиас',
    'bad/errors/orders.py:8:1: class-modules: refused — функция; в errors держат исключение',
    'bad/ports/bets.py:14:1: class-modules: SecondWriter — класс; в ports держат алиас, порт',
    'bad/use_cases/resolve.py:4:1: class-modules: rounded — функция; в use_cases держат класс',
  ])
# ---
# name: test_check_output_matches_the_snapshot[class_placement]
  list([
    'bad/application/handlers/work.py:7:1: class-placement: BetWriter — порт; ему место в ports',
    'bad/application/handlers/work.py:12:1: class-placement: PlaceOrder — dataclass; ему место в dto',
    'bad/application/handlers/work.py:16:1: class-placement: PlaceBetUseCase кончается на UseCase; ему место в use_cases',
    'bad/application/handlers/work.py:21:1: class-placement: PricingService кончается на Service; ему место в application/services',
    'bad/application/handlers/work.py:26:1: class-placement: OrderRepository кончается на Repository; ему место в infra/database/repositories',
    'bad/domain/rules.py:11:1: class-placement: MoneyError — исключение; ему место в errors, exceptions',
  ])
# ---
# name: test_check_output_matches_the_snapshot[confined_imports]
  list([
    'bad/application/service.py:4:1: confined-imports: fastapi в application/service; ему место в presentation, bootstrap',
    'bad/presentation/handlers.py:3:1: confined-imports: agents в presentation/handlers; этот пакет убран, импортировать его негде',
    'bad/presentation/handlers.py:4:1: confined-imports: sqlalchemy в presentation/handlers; ему место в infra/database, ioc',
  ])
# ---
# name: test_check_output_matches_the_snapshot[keyword_only_arguments]
  list([
    'bad/positional.py:4:1: keyword-only-arguments: price принимает market, stake по позиции; поставь `*` перед ними',
    'bad/positional.py:9:5: keyword-only-arguments: Rule.__init__ принимает name по позиции; поставь `*` перед ними',
    'bad/positional.py:12:5: keyword-only-arguments: Rule.apply принимает rule по позиции; поставь `*` перед ними',
    'bad/positional.py:16:1: keyword-only-arguments: collect принимает *args, **kwargs; перечисли аргументы по имени',
    'bad/positional.py:20:1: keyword-only-arguments: spread принимает first, second по позиции; поставь `*` перед ними',
    'bad/positional.py:29:5: keyword-only-arguments: Static.parse принимает self по позиции; поставь `*` перед ними',
    'bad/positional.py:33:1: keyword-only-arguments: handler принимает self по позиции; поставь `*` перед ними',
    'bad/positional.py:39:9: keyword-only-arguments: Outer.method.inner принимает self по позиции; поставь `*` перед ними',
  ])
# ---
# name: test_check_output_matches_the_snapshot[module_length]
  list([
    'bad/too_long.py:11:1: module-length: 13 строк, предел 10',
  ])
# ---
# name: test_check_output_matches_the_snapshot[nesting]
  list([
    'bad/deep.py:6:9: nesting: try вложен на 2, предел 1',
    'bad/deep.py:17:13: nesting: if вложен на 3, предел 2',
    'bad/deep.py:27:13: nesting: if вложен на 3, предел 2',
  ])
# ---
# name: test_check_output_matches_the_snapshot[operation_shape]
  list([
    'bad/application/services/limits.py:5:14: operation-shape: LimitsService держит UnitOfWorkFactory; операции передают то, через что она пишет, а транзакция остаётся вызывающему',
    'bad/application/use_cases/cancel_bet.py:5:5: operation-shape: CancelBetUseCase предлагает execute(), retry(); у операции один публичный метод, и это execute() — остальные приватны или это другой класс',
    'bad/application/use_cases/cancel_bet.py:12:1: operation-shape: _rounded() стоит рядом с операцией; нужный ей хелпер — приватный метод, нужный двоим — общий код',
    'bad/application/use_cases/reconcile.py:5:5: operation-shape: ReconcileUseCase.execute — аргументов 4, предел 3; передай команду, запрос или DTO',
    'bad/application/use_cases/settle_bet.py:6:1: operation-shape: Outcome стоит рядом с операцией; в use_cases модуль объявляет один класс и больше ничего',
    'bad/application/use_cases/settle_bet.py:11:32: operation-shape: SettleBetUseCase держит PlacementUnitOfWork; операции передают то, через что она пишет, а транзакция остаётся вызывающему',
  ])
# ---
# name: test_check_output_matches_the_snapshot[required_class]
  list([
    'bad/config/kafka.py:4:1: required-class: Topics объявлен выше ...Settings, ради которого существует модуль; хелперам место ниже',
    'bad/repositories/order.py:4:1: required-class: _rows объявлен выше ...Repository, ради которого существует модуль; хелперам место ниже',
    'bad/use_cases/bets.py:8:1: required-class: в модуле PlaceBetUseCase, CancelBetUseCase — один ...UseCase на модуль, и модуль назван его именем',
    'bad/use_cases/pricing.py:4:1: required-class: модуль объявляет PricingHelper, а в этой директории объявляют класс ...UseCase',
  ])
# ---
# name: test_check_output_matches_the_snapshot[sealed_imports]
  list([
    'bad/modules/chat/application/service.py:4:1: sealed-imports: fastapi в modules/chat/application/service: запечатанная зона знает только стандартную библиотеку и код сервиса',
    'bad/modules/chat/domain/models.py:3:1: sealed-imports: structlog в modules/chat/domain/models: запечатанная зона знает только стандартную библиотеку и код сервиса',
    'bad/modules/chat/domain/models.py:4:1: sealed-imports: sqlalchemy в modules/chat/domain/models: запечатанная зона знает только стандартную библиотеку и код сервиса',
    'bad/shared/validation.py:3:1: sealed-imports: email_validator в shared/validation: запечатанная зона знает только стандартную библиотеку и код сервиса',
  ])
# ---
